# CUDA-Demo

./: .bazelrc  .gitignore  MODULE.bazel  README.md
src/: BUILD.bazel  main.cu  renderer.cu  renderer.h
